feature/WL-5: wishlist actions
