# app/Models/Wishlist.php
@@ -7,6 +7,8 @@ use Illuminate\Database\Eloquent\Relations\BelongsTo;
 
 class Wishlist extends Model
 {
+    protected $fillable = ['user_id', 'product_id'];
+
     public function user(): BelongsTo
     {
         return $this->belongsTo(User::class);
